hard-gists/626356/run.log
=== Docker Run Log for 626356 ===
Started at: Mi 29. Okt 16:27:19 CET 2025

[2025-10-29 16:27:19] START: Running container for 626356
[2025-10-29 16:27:19] SUCCESS: Container 1a4c3f89fb5f650a7ee028f26650eb34001d4286e6d9ee1f5d761096e332e150 started for 626356
=== Container logs for 626356 ===
  File "/snippet.py", line 20
    print "Manhattan norm:", n_m, "/ per pixel:", n_m/img1.size
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 626356 ===
[2025-10-29 16:27:21] INFO: Container 1a4c3f89fb5f650a7ee028f26650eb34001d4286e6d9ee1f5d761096e332e150 has stopped
